# ros_audio_streamer

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: QT.cfg
nodes/: client.py  server.py
scripts/: play_audio.py
src/: audio_streamer.py
